[gd_scene load_steps=7 format=3 uid="uid://cpayroch3dxjg"]

[ext_resource type="Theme" uid="uid://dpfc6p7ruw7wo" path="res://fonts/Izayoi_Theme_Items.tres" id="1_dvsi0"]
[ext_resource type="Theme" uid="uid://du12ka2217r4x" path="res://fonts/Izayoi_Theme.tres" id="1_ofp1p"]
[ext_resource type="Script" uid="uid://dga6degdfd1pu" path="res://scenes/GUI/item_button.gd" id="2_oouan"]
[ext_resource type="Texture2D" uid="uid://bhofondcn84ew" path="res://sprites/UIPanel.png" id="3_pqruf"]
[ext_resource type="FontFile" uid="uid://dia8fvtnbbel2" path="res://fonts/Kalam/Kalam-Light.otf" id="4_h4p4o"]
[ext_resource type="Texture2D" uid="uid://334jwhhfyadm" path="res://sprites/icons/items/missing_item.png" id="4_t4ocv"]

[node name="ItemButton" type="PanelContainer"]
offset_right = 282.0
offset_bottom = 30.0
size_flags_horizontal = 0
size_flags_vertical = 4
theme = ExtResource("1_dvsi0")
script = ExtResource("2_oouan")

[node name="FocusBorder" type="NinePatchRect" parent="."]
visible = false
layout_mode = 2
texture = ExtResource("3_pqruf")
draw_center = false
region_rect = Rect2(0, 0, 48, 48)
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="ContentMargin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="ContentMargin"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="Icon" type="TextureRect" parent="ContentMargin/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_t4ocv")
expand_mode = 1
stretch_mode = 5

[node name="Equpped" type="Label" parent="ContentMargin/HBoxContainer/Icon"]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -20.0
offset_right = 20.0
grow_vertical = 0
theme_override_colors/font_color = Color(0.305882, 0.313726, 0.34902, 1)
theme_override_colors/font_outline_color = Color(0.0901961, 0.0901961, 0.0901961, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 15
text = "Eq."
vertical_alignment = 2

[node name="Name" type="RichTextLabel" parent="ContentMargin/HBoxContainer"]
custom_minimum_size = Vector2(190, 26)
layout_mode = 2
size_flags_vertical = 8
bbcode_enabled = true
text = "Item Name"
scroll_active = false
vertical_alignment = 1

[node name="Durability" type="Label" parent="ContentMargin/HBoxContainer"]
custom_minimum_size = Vector2(54, 26)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("4_h4p4o")
theme_override_font_sizes/font_size = 25
text = "00/00"
horizontal_alignment = 2
vertical_alignment = 2

[node name="ButtonLayer" type="TextureButton" parent="."]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("1_ofp1p")
action_mode = 0
